# sim_ecore

./: CMakeLists.txt  ConstexprSimulator.cc  Core.cc  Core.h  Instruction.h  LICENSE.txt  OpcodesRaw.h  README.md  Register.h  SBCore.cc  SBCore.h  SimplifiedSxCore.cc  SimplifiedSxCore.h  Simulator.cc  Types.h  main.cc  platformio.ini  sim3sx.cc
include/: 1284pSBCore.h  CacheLine.h  Core.h  DesktopSBCore.h  EBISBCore.h  FeatherM0AdaloggerSBCore.h  GCM4SBCore.h  HitagiSBCore.h  Instruction.h  InternalBootProgram.h  Mega2560SBCore.h  MemoryMappedFileThing.h  MemoryThing.h  NRF52832FeatherSBCore.h  OpcodesRaw.h  PSRAMChip.h  Register.h  SBCore.h  SBCore1284p.h  SBCoreArduino.h  SimplifiedSxCore.h  Types.h  type_traits.h
projects/sim3/: CMakeLists.txt  Core.h  OpcodesRaw.h  Register.cc  SimplifiedSxCore.h
src/: 1284pSBCore.cc  BootProgram.cc  Core.cc  CoreDispatch.cc  DesktopSBCore.cc  EBISBCore.cc  ExtendedInstructions.cc  FaultHandling.cc  FeatherM0AdaloggerSBCore.cc  GCM4SBCore.cc  HitagiSBCore.cc  IACHandlers.cc  InterruptHandling.cc  Mega2560SBCore.cc  MemoryInterfaceCommands.cc  MemoryMappedFileThing_Arduino.cc  MemoryThing.cc  NRF52832FeatherSBCore.cc  Register.cc  SBCore1284p.cc  SBCoreArduino.cc  Sim3SX_Arduino.cc  Sim3SX_Desktop.cc  SimplifiedSxCore.cc  sim3sx.cc
standalone/: main.cc
tests/: add_test.s
